# receding_planar_sys

./: .gitignore  CMakeLists.txt  bag_to_csv.sh  package.xml  produce_optimization_data_stats.py  record.sh
data/: user_trust_history.yaml
launch/: 0_maze_task_definitions.yaml  1_maze_task_definitions.yaml  crane_task.launch  dynamic_crane_task.launch  eval_task_definitions.yaml  interactive_experiment.rviz  interactive_robot.rviz  interactive_robot_direct.rviz  maze_crane_task.launch  maze_crane_task_direct.launch  maze_task_definitions.yaml  metric_eval_task.launch  noise_and_control_params.yaml  planar_cl_controller.launch  planar_cl_simulator.launch  receding_controller.launch  task_definitions.yaml  world_limits.yaml
src/: crane_task_definition.py  dynamic_crane_task.py  error_calculator.py  interactive_marker_ref_gen.cpp  interactive_marker_ref_gen.py  joystick_marker_ref_gen.py  maze_crane_task.py  metric_eval_task.py  obstacle_factory.py  optimizer.py  recalc_error.py  receding_controller.py  record_data.py  target_factory.py  task_fsm.py
