<?xml version="1.0"?>
<package>
  <name>receding_planar_sys</name>
  <version>0.0.0</version>
  <description>The receding_planar_sys package</description>

  <maintainer email="schultzjarvis@gmail.com">Jarvis Schultz</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>puppeteer_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosparam</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>angles</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>keyboard_node</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>objecttracker_nu</run_depend>
  <run_depend>puppeteer_msgs</run_depend>
  <run_depend>robot_simulator</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosparam</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial_node</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
